# yabaiswitch

./: CHANGELOG.md  Cargo.toml  yabai.asciidoc
.github/workflows/: rust.yml
src/: main.rs
