[package]
name = "yabaiswitch"
version = "0.1.0"
edition = "2021"
description = "Steven's script to switch windows using Yabai"
license = "MIT"
repository = "https://github.com/SichangHe/yabaiswitch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"

[profile.release]
lto = true
